# olio_ohjelmoinnin_perusteet_cpp

./: .gitignore
viikkotehtava_1/: main.cpp
viikkotehtava_2/: CMakeLists.txt  Game.cpp  Game.h  main.cpp
viikkotehtava_3/: CMakeLists.txt  chef.cpp  chef.h  main.cpp
viikkotehtava_4/: CMakeLists.txt  asiakas.cpp  asiakas.h  main.cpp  tilit.cpp  tilit.h
viikkotehtava_5/: CMakeLists.txt  main.cpp  notifikaattori.cpp  notifikaattori.h  seuraaja.cpp  seuraaja.h
viikkotehtava_7/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
viikkotethava_6/: CMakeLists.txt  main.cpp  student.cpp  student.h
